fix spacing of media-text block

--- a/src/scss/pages/front-page/sections/_about.scss
+++ b/src/scss/pages/front-page/sections/_about.scss
@@ -43,6 +43,9 @@ body.front-page {
               aspect-ratio: 1/1;
               z-index: 1;
               max-height: 402px;
+              @include mq("xl", "min") {
+                margin-left: 72px;
+              }
             }
             &__content {
               border: dotted 10px rgba(132, 0, 132, 1);
@@ -56,6 +59,10 @@ body.front-page {
               @include mq("md", "min") {
                 padding: $spacing--xxl;
                 padding-left: 182px;
+              }
+              @include mq("xl", "min") {
+                padding: $spacing--xxl;
+                padding-left: 142px;
               }
             }
           }
